centered the input area, added a pic, made it prettier

--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" />
     <title>Add To Cart</title>
   </head>
 
   <body>
-    <input type="text" id="input-field" placeholder="Bread" />
-    <button id="add-button">Add to cart</button>	  
+    <div class="container">
+      <img src="assests/catBox-800x531.jpg" alt="cat in box" />
+      <input type="text" id="input-field" placeholder="Box of Cat" />
+      <button id="add-button">Add to cart</button>	
+    </div>
+      
     <script src="index.js"></script>
   </body>
 </html>
