Feeds info to db, and post entry to html

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       <img src="assests/catBox-800x531.jpg" alt="cat in box" />
       <input type="text" id="input-field" placeholder="Box of Cat" />
       <button id="add-button">Add to cart</button>	
+      <ul id="shopping-list">
+      </ul>
     </div>
+    <script src="index.js" type="module">
       
-    <script src="index.js"></script>
+    </script>
   </body>
 </html>
