--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap"
+    />
     <title>Add To Cart</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="assests/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assests/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assests/favicon-16x16.png" />
+    <link rel="manifest" href="assests/site.webmanifest" />
   </head>
 
   <body>
     <div class="container">
       <img src="assests/catBox-800x531.jpg" alt="cat in box" />
       <input type="text" id="input-field" placeholder="Box of Cat" />
-      <button id="add-button">Add to cart</button>	
-      <ul id="shopping-list">
-      </ul>
+      <button id="add-button">Add to cart</button>
+      <ul id="shopping-list"></ul>
     </div>
-    <script src="index.js" type="module">
-      
-    </script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
